@@ -5,6 +5,8 @@
         "description": "No more secrets, Marty."
       },
       "emailConfiguration": {
+        "defaultFromEmail": "jared@piedpiper.com",
+        "defaultFromName": "Jared Dunn",
         "forgotPasswordEmailTemplateId": "49aba1de-0225-45d7-a2b1-f9fe46b0242c",
         "host": "smtp.sendgrid.net",
         "password": "password",
