@@ -1,8 +1,8 @@
 ==== Request Body
 
 [.api]
-[field]#emailTemplate.defaultFromName# [type]#[String (FreeMarker Enabled)]# [required]#Required#::
-The default From Name used when sending emails. This is the display name part of the email address ( i.e. **Jared Dunn**  <jared@piedpiper.com>).
+[field]#emailTemplate.defaultFromName# [type]#[String (FreeMarker Enabled)]# [optional]#Optional#::
+The default From Name used when sending emails. If not provided, and a localized value cannot be determined, the default value for the tenant will be used.  This is the display name part of the email address ( i.e. **Jared Dunn**  <jared@piedpiper.com>).
 
 [field]#emailTemplate.defaultHtmlTemplate# [type]#[String (FreeMarker Enabled)]# [required]#Required#::
 The default HTML Email Template.
@@ -13,8 +13,8 @@ The default Subject used when sending emails.
 [field]#emailTemplate.defaultTextTemplate# [type]#[String (FreeMarker Enabled)]# [required]#Required#::
 The default Text Email Template.
 
-[field]#emailTemplate.fromEmail# [type]#[String]# [required]#Required#::
-The email address that this email will be sent from. This is the address part email address (i.e.  Jared Dunn  <**jared@piedpiper.com**>).
+[field]#emailTemplate.fromEmail# [type]#[String]# [optional]#Optional#::
+The email address that this email will be sent from.  If not provided, the default value for the tenant will be used. This is the address part email address (i.e.  Jared Dunn  <**jared@piedpiper.com**>).
 
 [field]#emailTemplate.localizedFromNames# [type]#[Map<Locale,String (FreeMarker Enabled)>]# [optional]#Optional#::
 The From Name used when sending emails to users who speak other languages. This overrides the default From Name based on the user's list of preferred languages.
