@@ -5,7 +5,7 @@
 The list of all the Email Templates.
 
 [field]#emailTemplates``[x]``.defaultFromName# [type]#[String]#::
-The default From Name used when sending emails. This is the display name part of the email address ( i.e. **Jared Dunn**  <jared@piedpiper.com>).
+The default From Name used when sending emails. If not provided, and a localized value cannot be determined, the default value for the tenant will be used.  This is the display name part of the email address ( i.e. **Jared Dunn**  <jared@piedpiper.com>).
 
 [field]#emailTemplates``[x]``.defaultHtmlTemplate# [type]#[String]#::
 The default HTML Email Template.
@@ -17,7 +17,7 @@ The default Subject used when sending emails.
 The default Text Email Template.
 
 [field]#emailTemplates``[x]``.fromEmail# [type]#[String]#::
-The email address that this email will be sent from. This is the address part email address (i.e.  Jared Dunn  <**jared@piedpiper.com**>).
+The email address that this email will be sent from.  If not provided, the default value for the tenant will be used. This is the address part email address (i.e.  Jared Dunn  <**jared@piedpiper.com**>).
 
 [field]#emailTemplates``[x]``.id# [type]#[UUID]#::
 The Id of Email Template.
