@@ -11,6 +11,12 @@ When this value is set to true the email configuration provided by this tenant w
 +
 [deprecated]#Removed in version 1.8.0# In version 1.8.0 and beyond, a Tenant's email configuration is enabled upon configuration.
 
+[field]#tenant.emailConfiguration.defaultFromEmail# [type]#[String]# [since]#Available Since 1.16.0#::
+The default email address that emails will be sent from when a from address is not provided on an individual email template. This is the address part email address (i.e.  Jared Dunn  <**jared@piedpiper.com**>).
+
+[field]#tenant.emailConfiguration.defaultFromName# [type]#[String]# [since]#Available Since 1.16.0#::
+The default From Name used in sending emails when a from name is not provided on an individual email template. This is the display name part of the email address ( i.e. **Jared Dunn**  <jared@piedpiper.com>).
+
 [field]#tenant.emailConfiguration.forgotPasswordEmailTemplateId# [type]#[UUID]#::
 The Id of the Email Template that is used when a user is sent a forgot password email.
 
